netcfg (1.103) UNRELEASED; urgency=low

  * netcfg-common.c: Re-enable debug output for IPv4 DNS resolution in
    get_hostname_from_dns.

 -- Philipp Kern <pkern@debian.org>  Mon, 03 Dec 2012 21:55:27 +0100

netcfg (1.102) unstable; urgency=low

  [ Sorina Sandu ]
  * On Linux: Write a network-manager configuration file in perference
    to ifupdown if network-manager is found in the installed system.
    Configure wired networking with ifupdown if not. Do not configure
    wireless networking through ifupdown.

  [ Philipp Kern ]
  * nm-conf: Use Linux's random/uuid proc entry.
  * Write out network-manager configuration files with mode 0600.
  * Reword target_network_config template; do not ask the question.
  * nm-conf: use ESSID as connection name
  * finish-install: Do not set /etc/network/interfaces to mode 0600.
  * nm-conf: Allow both IPv4 and IPv6 to be activated post-installation.
  * nm-conf: Only write out MAC addresses on static configurations.
  * Do not compile in network-manager support on kFreeBSD & Hurd.

  [ Cyril Brulebois ]
  * finish-install: Fix bashisms; equality tests are done with '='.

  [ Updated translations ]
  * Belarusian (be.po) by Viktar Siarheichyk

 -- Philipp Kern <pkern@debian.org>  Thu, 22 Nov 2012 00:24:43 +0100

netcfg (1.101) unstable; urgency=low

  * Skip reachability test for empty gateway. (Closes: #690868)
  * Obey netcfg/disable_dhcp for compatibility reasons and disable
    autoconfig. There's no need to break old preseeding scripts,
    as the intent is clear.
  * Add a debconf template for netcfg/disable_autoconfig and state
    that netcfg/disable_dhcp is deprecated.

 -- Philipp Kern <pkern@debian.org>  Sat, 03 Nov 2012 21:48:31 +0100

netcfg (1.100) unstable; urgency=low

  * Temporarily revert the activation of IPv6 privacy extensions
    to cope with network-manager not commenting out the interfaces
    stanza correctly.

 -- Philipp Kern <pkern@debian.org>  Sun, 28 Oct 2012 10:16:17 +0100
